<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_popular">

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.talencote.ficat.fragments.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/nav_foryou"
        android:name="com.talencote.ficat.fragments.ForYouFragment"
        android:label="@string/menu_foryou"
        tools:layout="@layout/fragment_foryou" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.talencote.ficat.fragments.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>