<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">


    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/reg_login_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/reg_login_margin_top"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/reg_login_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/spacing_4x"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_log" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="@dimen/reg_login_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="@dimen/spacing_6x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="@dimen/text_size_signup"
        android:textColor="@color/light_gray"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/spacing_10x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_log"
        />

</androidx.constraintlayout.widget.ConstraintLayout>