<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:padding="@dimen/spacing_4x">

    <TextView
        android:id="@+id/manual"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/manual"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fandoms_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_dark"
        android:layout_marginTop="@dimen/spacing_2x"
        app:layout_constraintTop_toBottomOf="@id/manual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Fandoms" />

    <Button
        android:id="@+id/btn_set_fandoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_fandoms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fandoms_list" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginBottom="@dimen/spacing_4x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>